<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Zapod</string>
    <string name="apod">Astronomy Picture of the Day</string>
    <string name="loading">Loading… As the image is at maximum quality, it can be long to render it. Please wait.</string>
    <string name="define">Set as wallpaper</string>
    <string name="defined">Wallpaper changed</string>
    <string name="error">Cannot get image, maybe you are offline or it is a problem tied to NASA’s APOD website (not responding or published another format than image); try again later.</string>

    <string name="apod_web">APOD website</string>
    <string name="about">About</string>
    <string name="about_author">Author:\nJonathan Marsaud &lt;zic@marsaud.org&gt;\nwww.marsaud.org\nMade with ❤️ with Kotlin programming language</string>
    <string name="about_kotlin_alt">Kotlin’s logo</string>
    <string name="about_libraries">Libraries used:\nOkHttp3 (Apache - https://square.github.io/okhttp/)\njsoup (MIT - https://jsoup.org/)</string>
    <string name="about_okhttp_alt">OkHttp’s logo</string>
    <string name="about_jsoup_alt">jsoup’s logo</string>
    <string name="about_nasa">All APOD from NASA website (including the NASA logo itself) is owned by their authors.\nPlease refer to the APOD website (https://apod.nasa.gov/) to have more information about their licenses.</string>
    <string name="about_nasa_alt">NASA’s logo</string>
    <string name="notification_content">New APOD is available.</string>
    <string name="notification_channeldescription">Notify every day that a new APOD is available.</string>
</resources>